--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!doctype html >
-<html lang="en" data-theme="retro">
+<!doctype html>
+<html lang="en" data-theme="dracula">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="">
-    <div id="root"></div>
+  <body class="in">
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
